# IA_packages-synthesis

./: README.md  header.py  pyproject.toml  requirements.txt
ia_packages_synthesis/: __init__.py  header.py  process_pipeline.py
